# rollinggo-flight-cli

./: .gitignore  README.md
.github/workflows/: release.yml
rollinggo-npm-cli/: .gitignore  README.md  package-lock.json  package.json  tsup.config.ts
rollinggo-npm-cli/src/: auth.ts  client.ts  constants.ts  output.ts  payloads.ts  program.ts
rollinggo-npm-cli/tests/: cli.test.ts  output.test.ts  payloads.test.ts
rollinggo-uv-cli/: README.md  pyproject.toml
rollinggo-uv-cli/src/rollinggo_cli/: api.py  cli.py  constants.py  models.py  output.py
rollinggo-uv-cli/tests/: test_models.py  test_output.py
scripts/: install.ps1  install.sh
